--- a/pets.html
+++ b/pets.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <script async custom-element="amp-story"
+        src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400" rel="stylesheet">
     <style amp-custom>
       amp-story {
@@ -54,5 +56,19 @@
     </style>
   </head>
   <body>
+    <amp-story standalone
+        title="Zeek's Disney Trip"
+    publisher="Tom Dale"
+    publisher-logo-src="https://tom.imgix.net/krennic_profile.png?w=150&h=150&fit=crop&&crop=focalpoints&fp-z=2&fp-y=.2&auto=format,compress"
+    poster-portrait-src="https://tom.imgix.net/disney_zeek_back.HEIC?auto=format,compress&w=720&h=1280&fit=crop&crop=edges">
+       <amp-story-page id="cover">
+          <amp-story-grid-layer template="fill">
+    <amp-img src="https://tom.imgix.net/disney_zeek_back.HEIC?auto=format,compress&w=720&h=1280&fit=crop&crop=edges"
+        width="720" height="1280"
+        layout="responsive">
+    </amp-img>
+  </amp-story-grid-layer>
+   </amp-story-page>
+  </amp-story>
   </body>
 </html>
