--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ⚡>
   <head>
     <meta charset="utf-8">
-    <title>Joy of Pets</title>
-    <link rel="canonical" href="pets.html">
+    <title>Zeek's Disney Trip</title>
+    <link rel="canonical" href="index.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -67,6 +67,20 @@
         width="720" height="1280"
         layout="responsive">
     </amp-img>
+  </amp-story-grid-layer>
+  <amp-story-grid-layer template="vertical">
+  <h1>Zeek's Disney Trip</h1>
+  <p>A Magical Journey</p>
+</amp-story-grid-layer>
+   </amp-story-page>
+   <amp-story-page id="page1">
+          <amp-story-grid-layer template="vertical">
+          	<h1>The Water Park</h1>
+    <amp-img src="https://tom.imgix.net/disney_zeek_water.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=faces,edges"
+        width="720" height="1280"
+        layout="responsive">
+    </amp-img>
+    <p>It was a great time for Zeek!</p>
   </amp-story-grid-layer>
    </amp-story-page>
   </amp-story>
