--- a/index.html
+++ b/index.html
@@ -74,14 +74,28 @@
 </amp-story-grid-layer>
    </amp-story-page>
    <amp-story-page id="page1">
-          <amp-story-grid-layer template="vertical">
-          	<h1>The Water Park</h1>
+          <amp-story-grid-layer template="fill">
     <amp-img src="https://tom.imgix.net/disney_zeek_water.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=faces,edges"
         width="720" height="1280"
         layout="responsive">
     </amp-img>
-    <p>It was a great time for Zeek!</p>
   </amp-story-grid-layer>
+  <amp-story-grid-layer template="thirds">
+  <h1 grid area="upper-third">The Water Park</h1>
+  <p grid area="lower-third">Zeek had a great time!</p>
+</amp-story-grid-layer>
+   </amp-story-page>
+      <amp-story-page id="page2">
+          <amp-story-grid-layer template="fill">
+    <amp-img src="https://tom.imgix.net/disney_zeek_stormtrooper.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=faces,edges"
+        width="720" height="1280"
+        layout="responsive">
+    </amp-img>
+  </amp-story-grid-layer>
+  <amp-story-grid-layer template="thirds">
+  <h1 grid area="upper-third">The Water Park</h1>
+  <p grid area="lower-third">Zeek had a great time!</p>
+</amp-story-grid-layer>
    </amp-story-page>
   </amp-story>
   </body>
