--- a/index.html
+++ b/index.html
@@ -63,29 +63,29 @@
     poster-portrait-src="https://tom.imgix.net/disney_zeek_back.HEIC?auto=format,compress&w=720&h=1280&fit=crop&crop=edges">
        <amp-story-page id="cover">
           <amp-story-grid-layer template="fill">
-    <amp-img src="https://tom.imgix.net/disney_zeek_back.HEIC?auto=format,compress&w=720&h=1280&fit=crop&crop=edges"
+    <amp-img src="https://tom.imgix.net/disney_zeek_dance.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=edges"
         width="720" height="1280"
         layout="responsive">
     </amp-img>
   </amp-story-grid-layer>
   <amp-story-grid-layer template="vertical">
-  <h1>Zeek's Disney Trip</h1>
-  <p>A Magical Journey</p>
-</amp-story-grid-layer>
+  <h1>Disney Dance Parties</h1>
+  <p>Zeek was never afraid to partake in a dance party at Disney!</p>
+	</amp-story-grid-layer>
    </amp-story-page>
-   <amp-story-page id="page1">
-          <amp-story-grid-layer template="fill">
-    <amp-img src="https://tom.imgix.net/disney_zeek_water.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=faces,edges"
+ <amp-story-page id="page1">
+    <amp-story-grid-layer template="fill">
+    	<amp-img src="https://tom.imgix.net/disney_zeek_water.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=faces,edges"
         width="720" height="1280"
         layout="responsive">
-    </amp-img>
-  </amp-story-grid-layer>
-  <amp-story-grid-layer template="thirds">
-  <h1 grid area="upper-third">The Water Park</h1>
-  <p grid area="lower-third">Zeek had a great time!</p>
-</amp-story-grid-layer>
+    	</amp-img>
+  	</amp-story-grid-layer>
+  	<amp-story-grid-layer template="thirds">
+  		<h1 grid area="upper-third">The Water Park</h1>
+  		<p grid area="lower-third">Zeek had a great time!</p>
+	</amp-story-grid-layer>
    </amp-story-page>
-      <amp-story-page id="page2">
+   <amp-story-page id="page2">
           <amp-story-grid-layer template="fill">
     <amp-img src="https://tom.imgix.net/disney_zeek_stormtrooper.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=faces,edges"
         width="720" height="1280"
@@ -96,6 +96,22 @@
   <h1 grid area="upper-third">The Water Park</h1>
   <p grid area="lower-third">Zeek had a great time!</p>
 </amp-story-grid-layer>
+   </amp-story-page>
+   </amp-story-page>
+   <amp-story-page id="page3">
+          <amp-story-grid-layer template="fill">
+    <amp-video width="720"
+  height="1280"
+  poster="/img/tokyo.jpg"
+  layout="responsive"
+  controls
+  autoplay>
+  <source type="application/vnd.apple.mpegurl"
+    src="https://stream.mux.com/a2BfnCauOT9gN2OjnzCswQ5kmDJXaDYI.m3u8">
+  <source type="video/mp4"
+    src="https://tom.imgix.net/disney_zeek_dance2.mp4">
+</amp-video>
+  </amp-story-grid-layer>
    </amp-story-page>
   </amp-story>
   </body>
