--- a/index.html
+++ b/index.html
@@ -73,29 +73,32 @@
   <p>Zeek was never afraid to partake in a dance party at Disney!</p>
 	</amp-story-grid-layer>
    </amp-story-page>
- <amp-story-page id="page1">
-    <amp-story-grid-layer template="fill">
-    	<amp-img src="https://tom.imgix.net/disney_zeek_water.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=faces,edges"
-        width="720" height="1280"
-        layout="responsive">
-    	</amp-img>
-  	</amp-story-grid-layer>
-  	<amp-story-grid-layer template="thirds">
-  		<h1 grid area="upper-third">The Water Park</h1>
-  		<p grid area="lower-third">Zeek had a great time!</p>
-	</amp-story-grid-layer>
-   </amp-story-page>
-   <amp-story-page id="page2">
+   <amp-story-page id="page1">
           <amp-story-grid-layer template="fill">
-    <amp-img src="https://tom.imgix.net/disney_zeek_stormtrooper.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=faces,edges"
+    <amp-video width="720"
+  height="1280"
+  poster="/img/tokyo.jpg"
+  layout="responsive"
+  controls
+  autoplay>
+  <source type="application/vnd.apple.mpegurl"
+    src="https://stream.mux.com/1wBQ2ffadnxQVhHTWeAnf4exw4rKHaHB.m3u8">
+  <source type="video/mp4"
+    src="https://tom.imgix.net/disney_zeek_dance1.mp4">
+</amp-video>
+  </amp-story-grid-layer>
+   </amp-story-page>
+       <amp-story-page id="page2">
+          <amp-story-grid-layer template="fill">
+    <amp-img src="https://tom.imgix.net/disney_zeek_kinglouie.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=edges"
         width="720" height="1280"
         layout="responsive">
     </amp-img>
   </amp-story-grid-layer>
-  <amp-story-grid-layer template="thirds">
-  <h1 grid area="upper-third">The Water Park</h1>
-  <p grid area="lower-third">Zeek had a great time!</p>
-</amp-story-grid-layer>
+  <amp-story-grid-layer template="vertical">
+  <h1>Jungle Booke</h1>
+  <p>Zeek loves his new pal King Louie!</p>
+	</amp-story-grid-layer>
    </amp-story-page>
    <amp-story-page id="page3">
           <amp-story-grid-layer template="fill">
