--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     poster-portrait-src="https://tom.imgix.net/disney_zeek_back.HEIC?auto=format,compress&w=720&h=1280&fit=crop&crop=edges">
        <amp-story-page id="cover">
           <amp-story-grid-layer template="fill">
-    <amp-img src="https://tom.imgix.net/disney_zeek_dance.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=edges"
+    <amp-img src="https://tom.imgix.net/disney_zeek_dance.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=faces,edges"
         width="720" height="1280"
         layout="responsive">
     </amp-img>
