--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <amp-story-grid-layer template="fill">
     <amp-video width="720"
   height="1280"
-  poster="/img/tokyo.jpg"
+  poster="https://image.mux.com/1wBQ2ffadnxQVhHTWeAnf4exw4rKHaHB/thumbnail.png?width=360&height=640&fit_mode=crop"
   layout="responsive"
   controls
   autoplay>
@@ -90,13 +90,13 @@
    </amp-story-page>
        <amp-story-page id="page2">
           <amp-story-grid-layer template="fill">
-    <amp-img src="https://tom.imgix.net/disney_zeek_kinglouie.jpg?auto=format,compress&w=720&h=1280&fit=crop&crop=edges"
+    <amp-img src="https://tom.imgix.net/disney_zeek_kinglouie.jpg?auto=format,compress&w=720&h=1280&fit=fill&fill=blur"
         width="720" height="1280"
         layout="responsive">
     </amp-img>
   </amp-story-grid-layer>
   <amp-story-grid-layer template="vertical">
-  <h1>Jungle Booke</h1>
+  <h1>Jungle Book</h1>
   <p>Zeek loves his new pal King Louie!</p>
 	</amp-story-grid-layer>
    </amp-story-page>
@@ -104,7 +104,7 @@
           <amp-story-grid-layer template="fill">
     <amp-video width="720"
   height="1280"
-  poster="/img/tokyo.jpg"
+  poster="https://image.mux.com/a2BfnCauOT9gN2OjnzCswQ5kmDJXaDYI/thumbnail.png?width=360&height=640&fit_mode=crop"
   layout="responsive"
   controls
   autoplay>
