mux to imgix images

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <amp-story-grid-layer template="fill">
     <amp-video width="720"
   height="1280"
-  poster="https://image.mux.com/1wBQ2ffadnxQVhHTWeAnf4exw4rKHaHB/thumbnail.png?width=360&height=640&fit_mode=crop"
+  poster="https://thedales.imgix.net/1wBQ2ffadnxQVhHTWeAnf4exw4rKHaHB/thumbnail.png?w=360&h=640&fit=crop&auto=format,compress&q=60"
   layout="responsive"
   controls
   autoplay>
@@ -104,7 +104,7 @@
           <amp-story-grid-layer template="fill">
     <amp-video width="720"
   height="1280"
-  poster="https://image.mux.com/a2BfnCauOT9gN2OjnzCswQ5kmDJXaDYI/thumbnail.png?width=360&height=640&fit_mode=crop"
+  poster="https://thedales.imgix.net/a2BfnCauOT9gN2OjnzCswQ5kmDJXaDYI/thumbnail.png?w=360&h=640&fit=crop&auto=format,compress&q=60"
   layout="responsive"
   controls
   autoplay>
