added more stories and removed assets

--- a/index.html
+++ b/index.html
@@ -115,6 +115,58 @@
 </amp-video>
   </amp-story-grid-layer>
   </amp-story-page>
+  <amp-story-page id="page4">
+          <amp-story-grid-layer template="fill">
+    <amp-img src="https://tom.imgix.net/disney_zeek_toystory.jpg?auto=format,compress&w=720&h=1280&fit=fill&fill=blur"
+        width="720" height="1280"
+        layout="responsive">
+    </amp-img>
+  </amp-story-grid-layer>
+  <amp-story-grid-layer template="vertical">
+  <h1>Toy Story Land</h1>
+  </amp-story-grid-layer>
+   </amp-story-page>
+   <amp-story-page id="page5">
+          <amp-story-grid-layer template="fill">
+    <amp-video width="720"
+  height="1280"
+  poster="https://image.mux.com/vCwbnC8dywmnvKVbVN9G6vuJ36hKp2v01/thumbnail.png?width=214&height=121&fit_mode=pad"
+  layout="responsive"
+  controls
+  autoplay>
+  <source type="application/vnd.apple.mpegurl"
+    src="https://stream.mux.com/vCwbnC8dywmnvKVbVN9G6vuJ36hKp2v01.m3u8">
+  <source type="video/mp4"
+    src="https://tom.imgix.net/disney_zeek_toystory.mp4">
+</amp-video>
+  </amp-story-grid-layer>
+  </amp-story-page>
+  <amp-story-page id="page6">
+          <amp-story-grid-layer template="fill">
+    <amp-img src="https://tom.imgix.net/disney_zeek_minnie.jpg?auto=format,compress&w=720&h=1280&fit=fill&fill=blur"
+        width="720" height="1280"
+        layout="responsive">
+    </amp-img>
+  </amp-story-grid-layer>
+  <amp-story-grid-layer template="vertical">
+  <h1>Hanging with Minnie</h1>
+  </amp-story-grid-layer>
+   </amp-story-page>
+   <amp-story-page id="page7">
+          <amp-story-grid-layer template="fill">
+    <amp-video width="720"
+  height="1280"
+  poster="https://image.mux.com/T48WBihqo6LwCkR6fQ9S00Q8pmuIa00AnH/thumbnail.png?width=214&height=121&fit_mode=padhttps://"
+  layout="responsive"
+  controls
+  autoplay>
+  <source type="application/vnd.apple.mpegurl"
+    src="https://stream.mux.com/T48WBihqo6LwCkR6fQ9S00Q8pmuIa00AnH.m3u8">
+  <source type="video/mp4"
+    src="https://tom.imgix.net/disney_zeek_fireworks.mp4">
+</amp-video>
+  </amp-story-grid-layer>
+  </amp-story-page>
   <amp-story-bookend src="bookend.json" layout="nodisplay"></amp-story-bookend>
 </amp-story>
   </body>
